--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -11,7 +11,7 @@ set( COMMON_INCLUDES
         ../report/Timers.hpp
         ../data/SequenceEntry.hpp
         ../data/FastaEntry.hpp
-        ../data/UniRefEntry.hpp)
+        ../data/UniRefEntry.hpp ../report/ConfusionMatrix.hpp)
 
 ### Generate the main executable
 add_executable( markovian_features ${COMMON_INCLUDES} markovian_features.cpp )
