--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,17 +1,29 @@
 ## Dependencies
 
-
 set( COMMON_INCLUDE_DIRECTORIES
         ../algorithm
         ../report
-        ../data ../features )
+        ../data
+        ../features )
+
 set( COMMON_INCLUDES
         ../algorithm/common.hpp
         ../algorithm/MarkovianKernels.hpp
         ../report/Timers.hpp
         ../data/SequenceEntry.hpp
         ../data/FastaEntry.hpp
-        ../data/LabeledEntry.hpp ../report/ConfusionMatrix.hpp ../features/similarities.hpp ../algorithm/aminoacids_grouping.hpp ../report/CrossValidationStatistics.hpp ../report/crossvalidation.hpp ../algorithm/ConfiguredPipeline.hpp ../algorithm/Series.hpp)
+        ../data/LabeledEntry.hpp
+        ../report/ConfusionMatrix.hpp
+        ../features/similarities.hpp
+        ../algorithm/aminoacids_grouping.hpp
+        ../report/CrossValidationStatistics.hpp
+        ../report/crossvalidation.hpp
+        ../algorithm/ConfiguredPipeline.hpp
+        ../algorithm/Series.hpp
+        ../algorithm/SVMPipeline.hpp
+        ../algorithm/VariantGenerator.hpp
+        ../algorithm/SVMMarkovianModel.hpp
+        ../data/dlib_utilities.hpp ../features/FeatureScoreAUC.hpp ../algorithm/FeatureScoringPipeline.hpp ../algorithm/MarkovianModelFeatures.hpp)
 
 ### Generate the main executable
 add_executable( markovian_features ${COMMON_INCLUDES} markovian_features.cpp)
@@ -21,6 +33,18 @@ target_include_directories( markovian_features PRIVATE
 target_link_libraries( markovian_features PRIVATE fmt-header-only stdc++fs )
 target_compile_features( markovian_features PRIVATE cxx_std_17)
 
+### Generate the main executable
+#find_library (DLIB_LIBRARY NAMES libdlib dlilb libdlib.a PATHS ${DLIB_PREFIX}/lib NO_DEFAULT_PATH)
+
+add_executable( markovian_features_svm ${COMMON_INCLUDES} markovian_features_svm.cpp)
+target_include_directories( markovian_features_svm PRIVATE
+        ${CMAKE_SOURCE_DIR}/src/include
+        ${COMMON_INCLUDE_DIRECTORIES}
+        ${DLIB_PREFIX}/include )
+
+target_link_libraries( markovian_features_svm PRIVATE fmt-header-only stdc++fs dlib::dlib )
+target_compile_features( markovian_features_svm PRIVATE cxx_std_17)
+
 ### Generate the subsetter executable
 add_executable( subsetDataset  ${COMMON_INCLUDES} subsetDataset.cpp)
 target_include_directories( subsetDataset PRIVATE
@@ -29,6 +53,13 @@ target_include_directories( subsetDataset PRIVATE
 target_link_libraries( subsetDataset PRIVATE fmt-header-only  stdc++fs )
 target_compile_features( subsetDataset PRIVATE cxx_std_17)
 
+### Generate the feature scoring executable
+add_executable( markovian_features_scoring  ${COMMON_INCLUDES} markovian_features_analysis.cpp)
+target_include_directories( markovian_features_scoring PRIVATE
+        ${CMAKE_SOURCE_DIR}/src/include
+        ${COMMON_INCLUDE_DIRECTORIES} )
+target_link_libraries( markovian_features_scoring PRIVATE fmt-header-only stdc++fs )
+target_compile_features( markovian_features_scoring PRIVATE cxx_std_17)
 
 ### Confusion Matrix Test
 add_executable( confusionMatrix  ${COMMON_INCLUDES} confusionMatrix.cpp )
