OOP refactoring logic

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -8,7 +8,7 @@ set( COMMON_INCLUDE_DIRECTORIES
 
 set( COMMON_INCLUDES
         ../algorithm/common.hpp
-        ../algorithm/MarkovianKernels.hpp
+        ../algorithm/HOMC.hpp
         ../report/Timers.hpp
         ../data/SequenceEntry.hpp
         ../data/FastaEntry.hpp
@@ -18,21 +18,39 @@ set( COMMON_INCLUDES
         ../algorithm/aminoacids_grouping.hpp
         ../report/CrossValidationStatistics.hpp
         ../report/crossvalidation.hpp
-        ../algorithm/ConfiguredPipeline.hpp
+        ../algorithm/HOMCPipeline.hpp
         ../algorithm/Series.hpp
         ../algorithm/SVMPipeline.hpp
         ../algorithm/VariantGenerator.hpp
         ../algorithm/SVMMarkovianModel.hpp
-        ../data/dlib_utilities.hpp ../features/FeatureScoreAUC.hpp ../algorithm/FeatureScoringPipeline.hpp ../algorithm/MarkovianModelFeatures.hpp)
+        ../data/dlib_utilities.hpp
+        ../features/FeatureScoreAUC.hpp
+        ../algorithm/FeatureScoringPipeline.hpp
+        ../algorithm/HOMCFeatures.hpp
+        ../algorithm/Histogram.hpp
+        ../algorithm/HOMCOperations.hpp
+        ../algorithm/HOMCDefs.hpp
+        ../algorithm/MarkovChains.hpp
+        ../algorithm/ZYMC.hpp
+        ../algorithm/ZYPipeline.hpp)
 
 add_definitions(-ftemplate-backtrace-limit=0)
-### Generate the main executable
-add_executable( markovian_features ${COMMON_INCLUDES} markovian_features.cpp)
-target_include_directories( markovian_features PRIVATE
+### Generate the MC Pipeline executable
+add_executable( homc_pipeline ${COMMON_INCLUDES} HOMC_pipeline.cpp)
+target_include_directories( homc_pipeline PRIVATE
         ${CMAKE_SOURCE_DIR}/src/include
         ${COMMON_INCLUDE_DIRECTORIES} )
-target_link_libraries( markovian_features PRIVATE fmt-header-only stdc++fs )
-target_compile_features( markovian_features PRIVATE cxx_std_17)
+target_link_libraries( homc_pipeline PRIVATE fmt-header-only stdc++fs )
+target_compile_features( homc_pipeline PRIVATE cxx_std_17)
+
+### Generate the Zheng Yuan Pipeline executable
+add_executable( ZhengYuan_pipeline ${COMMON_INCLUDES} ZhengYuan_pipeline.cpp)
+target_include_directories( ZhengYuan_pipeline PRIVATE
+        ${CMAKE_SOURCE_DIR}/src/include
+        ${COMMON_INCLUDE_DIRECTORIES} )
+target_link_libraries( ZhengYuan_pipeline PRIVATE fmt-header-only stdc++fs )
+target_compile_features( ZhengYuan_pipeline PRIVATE cxx_std_17)
+
 
 ### Generate the main executable
 #find_library (DLIB_LIBRARY NAMES libdlib dlilb libdlib.a PATHS ${DLIB_PREFIX}/lib NO_DEFAULT_PATH)
