--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,9 +49,12 @@ set( EXPECTED_TEST_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/output)
 
 
 ### Add external libraries
+message($ENV{FMT_SOURCE})
+#message($ENV{DLIB_SOURCE})
 add_subdirectory($ENV{FMT_SOURCE} fmt_build )
-add_subdirectory($ENV{DLIB_SOURCE} dlib_build )
+#add_subdirectory($ENV{DLIB_SOURCE} dlib_build )
 
 ### Add all the files in the src directory to the CMake tree
 add_subdirectory( src )
+
 
