--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -6,38 +6,55 @@ set( COMMON_INCLUDE_DIRECTORIES
         ../data
         ../features )
 
+set( MC_SOURCE_FILES
+        ../algorithm/KNNConfusionMC.cpp
+        ../algorithm/KNNModel.cpp
+        ../algorithm/LSMC.cpp
+        ../algorithm/MC.cpp
+        ../algorithm/Pipeline.cpp
+        ../algorithm/SVMConfusionMC.cpp
+        ../algorithm/SVMMarkovianModel.cpp
+        ../algorithm/SVMModel.cpp
+        ../algorithm/ZYMC.cpp)
+
+
+set( MC_DETAILS_TEMPLATE_FILES
+        ../algorithm/KNNConfusionMC.h
+        ../algorithm/KNNModel.hpp
+        ../algorithm/LSMC.hpp
+        ../algorithm/MC.hpp
+        ../algorithm/Pipeline.hpp
+        ../algorithm/SVMConfusionMC.hpp
+        ../algorithm/SVMMarkovianModel.hpp
+        ../algorithm/SVMModel.hpp
+        ../algorithm/ZYMC.hpp
+        ../algorithm/MLConfusedMC.hpp )
+
 set( COMMON_INCLUDES
         ../algorithm/common.hpp
-        ../algorithm/RangedOrderMC.hpp
         ../report/Timers.hpp
         ../data/SequenceEntry.hpp
         ../data/FastaEntry.hpp
         ../data/LabeledEntry.hpp
         ../report/ConfusionMatrix.hpp
-        ../features/similarities.hpp
+        ../algorithm/SimilarityMetrics.hpp
         ../algorithm/aminoacids_grouping.hpp
         ../report/CrossValidationStatistics.hpp
         ../report/crossvalidation.hpp
         ../algorithm/Pipeline.hpp
         ../algorithm/Series.hpp
         ../algorithm/VariantGenerator.hpp
-        ../algorithm/SVMMarkovianModel.hpp
         ../data/dlib_utilities.hpp
         ../features/FeatureScoreAUC.hpp
         ../algorithm/FeatureScoringPipeline.hpp
-        ../algorithm/MCFeatures.hpp
-        ../algorithm/Histogram.hpp
-        ../algorithm/MCOperations.hpp
-        ../algorithm/AbstractMC.hpp
-        ../algorithm/ZYMC.hpp
-        ../algorithm/MC.hpp ../algorithm/LSMC.hpp)
+        ../algorithm/Histogram.hpp )
 
 add_definitions(-ftemplate-backtrace-limit=0)
 
 find_package( dlib )
 #message( ${dlib_LIBS} )
 ### Generate the MC Pipeline executable
-add_executable( MC_pipeline ${COMMON_INCLUDES} MC_pipeline.cpp)
+add_executable( MC_pipeline ${COMMON_INCLUDES} ${MC_SOURCE_FILES} ${MC_DETAILS_TEMPLATE_FILES} MC_pipeline.cpp)
 target_include_directories( MC_pipeline PRIVATE
         ${CMAKE_SOURCE_DIR}/src/include
         ${COMMON_INCLUDE_DIRECTORIES}
@@ -47,7 +64,8 @@ target_link_libraries( MC_pipeline PRIVATE fmt-header-only stdc++fs dlib::dlib )
 target_compile_features( MC_pipeline PRIVATE cxx_std_17)
 
 ### Generate the feature scoring executable
-add_executable( markovian_features_scoring  ${COMMON_INCLUDES} markovian_features_analysis.cpp)
+add_executable( markovian_features_scoring  ${COMMON_INCLUDES}  ${MC_SOURCE_FILES}
+        ${MC_DETAILS_TEMPLATE_FILES} markovian_features_analysis.cpp)
 target_include_directories( markovian_features_scoring PRIVATE
         ${CMAKE_SOURCE_DIR}/src/include
         ${COMMON_INCLUDE_DIRECTORIES}
@@ -56,7 +74,7 @@ target_link_libraries( markovian_features_scoring PRIVATE fmt-header-only stdc++
 target_compile_features( markovian_features_scoring PRIVATE cxx_std_17 )
 
 ### Confusion Matrix Test
-add_executable( confusionMatrix  ${COMMON_INCLUDES} confusionMatrix.cpp )
+add_executable( confusionMatrix  ${COMMON_INCLUDES} confusionMatrix.cpp ../algorithm/MCFeatures.cpp ../algorithm/MCOperations.cpp ../algorithm/RangedOrderMC.cpp)
 target_include_directories( confusionMatrix PRIVATE
         ${CMAKE_SOURCE_DIR}/src/include
         ${COMMON_INCLUDE_DIRECTORIES} )
