--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,60 +1,64 @@
 ## Dependencies
 
 set( COMMON_INCLUDE_DIRECTORIES
-        ../algorithm
+        ../mc
         ../report
         ../data
         ../features )
 
 set( MC_SOURCE_FILES
-        ../algorithm/Selection.cpp
-        ../algorithm/AbstractMC.cpp
-        ../algorithm/KNNConfusionMC.cpp
-        ../algorithm/KNNMCParameters.cpp
-        ../algorithm/KNNModel.cpp
-        ../algorithm/LSMC.cpp
-        ../algorithm/MC.cpp
-        ../algorithm/Pipeline.cpp
-        ../algorithm/SVMConfusionMC.cpp
-        ../algorithm/SVMMCParameters.cpp
-        ../algorithm/SVMModel.cpp
-        ../algorithm/ZYMC.cpp ../report/ConfusionMatrix.cpp ../report/CrossValidationStatistics.cpp)
+        ../mc/Selection.cpp
+        ../mc/AbstractMC.cpp
+        ../mc/MacroSimilarityClassifier.cpp
+        ../mc/MicroSimilarityVotingClassifier.cpp
+        ../mc/KNNConfusionMC.cpp
+        ../mc/KNNMCParameters.cpp
+        ../mc/KNNModel.cpp
+        ../mc/LSMC.cpp
+        ../mc/MC.cpp
+        ../mc/Pipeline.cpp
+        ../mc/SVMConfusionMC.cpp
+        ../mc/SVMMCParameters.cpp
+        ../mc/SVMModel.cpp
+        ../mc/ZYMC.cpp ../report/ConfusionMatrix.cpp ../report/CrossValidationStatistics.cpp)
 
 
 set( MC_DETAILS_TEMPLATE_FILES
-        ../algorithm/AbstractMC.hpp
-        ../algorithm/KNNConfusionMC.hpp
-        ../algorithm/KNNMCParameters.hpp
-        ../algorithm/KNNModel.hpp
-        ../algorithm/LSMC.hpp
-        ../algorithm/MC.hpp
-        ../algorithm/Pipeline.hpp
-        ../algorithm/SVMConfusionMC.hpp
-        ../algorithm/SVMMCParameters.hpp
-        ../algorithm/SVMModel.hpp
-        ../algorithm/ZYMC.hpp
-        ../algorithm/MLConfusedMC.hpp )
+        ../mc/AbstractMC.hpp
+        ../mc/MacroSimilarityClassifier.hpp
+        ../mc/MicroSimilarityVotingClassifier.hpp
+        ../mc/KNNConfusionMC.hpp
+        ../mc/KNNMCParameters.hpp
+        ../mc/KNNModel.hpp
+        ../mc/LSMC.hpp
+        ../mc/MC.hpp
+        ../mc/Pipeline.hpp
+        ../mc/SVMConfusionMC.hpp
+        ../mc/SVMMCParameters.hpp
+        ../mc/SVMModel.hpp
+        ../mc/ZYMC.hpp
+        ../mc/MLConfusedMC.hpp)
 
 set( COMMON_INCLUDES
-        ../algorithm/common.hpp
+        ../mc/common.hpp
         ../report/Timers.hpp
         ../data/SequenceEntry.hpp
         ../data/FastaEntry.hpp
         ../data/LabeledEntry.hpp
         ../report/ConfusionMatrix.hpp
-        ../algorithm/SimilarityMetrics.hpp
-        ../algorithm/aminoacids_grouping.hpp
+        ../mc/SimilarityMetrics.hpp
+        ../mc/aminoacids_grouping.hpp
         ../report/CrossValidationStatistics.hpp
         ../report/crossvalidation.hpp
-        ../algorithm/Pipeline.hpp
-        ../algorithm/Series.hpp
-        ../algorithm/VariantGenerator.hpp
+        ../mc/Pipeline.hpp
+        ../mc/Series.hpp
+        ../mc/VariantGenerator.hpp
         ../data/dlib_utilities.hpp
         ../features/FeatureScoreAUC.hpp
-        ../algorithm/FeatureScoringPipeline.hpp
-        ../algorithm/Histogram.hpp
-        ../algorithm/MCDefs.h
-        ../algorithm/Selection.hpp )
+        ../mc/FeatureScoringPipeline.hpp
+        ../mc/Histogram.hpp
+        ../mc/MCDefs.h
+        ../mc/Selection.hpp)
 
 add_definitions(-ftemplate-backtrace-limit=0)
 
@@ -72,7 +76,7 @@ target_compile_features( MC_pipeline PRIVATE cxx_std_17)
 
 ### Generate the feature scoring executable
 add_executable( markovian_features_scoring  ${COMMON_INCLUDES}  ${MC_SOURCE_FILES}
-        ${MC_DETAILS_TEMPLATE_FILES} markovian_features_analysis.cpp ../algorithm/AbstractMC.cpp)
+        ${MC_DETAILS_TEMPLATE_FILES} markovian_features_analysis.cpp ../mc/AbstractMC.cpp)
 target_include_directories( markovian_features_scoring PRIVATE
         ${CMAKE_SOURCE_DIR}/src/include
         ${COMMON_INCLUDE_DIRECTORIES}
@@ -81,7 +85,7 @@ target_link_libraries( markovian_features_scoring PRIVATE fmt-header-only stdc++
 target_compile_features( markovian_features_scoring PRIVATE cxx_std_17 )
 
 ### Confusion Matrix Test
-add_executable( confusionMatrix  ${COMMON_INCLUDES} confusionMatrix.cpp ../algorithm/MCFeatures.cpp ../algorithm/RangedOrderMC.cpp)
+add_executable( confusionMatrix  ${COMMON_INCLUDES} confusionMatrix.cpp ../mc/MCFeatures.cpp ../mc/RangedOrderMC.cpp)
 target_include_directories( confusionMatrix PRIVATE
         ${CMAKE_SOURCE_DIR}/src/include
         ${COMMON_INCLUDE_DIRECTORIES} )
