working segmentation app, but nothing interesting yet

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -5,7 +5,7 @@ set( INCLUDES ../report ../mc ../features ../data ../segmentation ${dlib_INCLUDE
 
 
 
-set( LIBS ${MC_LIB} )
+set( LIBS ${MC_LIB}  )
 
 add_definitions(-ftemplate-backtrace-limit=0)
 
@@ -22,11 +22,17 @@ target_link_libraries( markovian_features_scoring PRIVATE  ${LIBS} fmt-header-on
 target_compile_features( markovian_features_scoring PRIVATE cxx_std_17 )
 
 ### Confusion Matrix Test
+add_executable( segmentation segmentation.cpp )
+target_include_directories( segmentation PRIVATE ${INCLUDES} ${CMAKE_SOURCE_DIR}/src/include )
+target_link_libraries( segmentation PRIVATE  ${LIBS} ${SEGMENTATION_LIB} fmt-header-only  )
+target_compile_features( segmentation PRIVATE cxx_std_17)
+
+
+### Segmentation
 add_executable( confusionMatrix confusionMatrix.cpp )
 target_include_directories( confusionMatrix PRIVATE ${INCLUDES} ${CMAKE_SOURCE_DIR}/src/include )
 target_link_libraries( confusionMatrix PRIVATE  ${LIBS} fmt-header-only  )
 target_compile_features( confusionMatrix PRIVATE cxx_std_17)
-
 
 # Install the executable (generate with 'make install' in the bin directory)
 #install( TARGETS ${FINDING_CLUMPS_EXE} DESTINATION bin )
